Feature 2nd version

--- a/index.html
+++ b/index.html
@@ -18,21 +18,20 @@
             <!-- START OF HEADER -->
             <header>
                 <div class="header__main">
-                    <h1>Школа английского языка</h1>
+                    <h1>Polly Glotiki — онлайн-школа английского языка</h1>
                     <h3>
-                        Lorem Ipsum is simply dummy text of the printing and
-                        typesetting industry. Lorem Ipsum has been the
-                        industry's standard dummy text ever since the 1500s
+                        Для детей и подростков от 4 до 17 лет. Доводим до
+                        результата с помощью игр и меняем «надо» на «хочу»!
                     </h3>
                     <a href="#id1">Записаться на пробный урок</a>
-                    <a href="#id2">Посмотреть преподавателей</a>
+                    <a href="#id2">Выбрать преподавателя</a>
                 </div>
             </header>
             <!-- END OF HEADER -->
 
             <main>
                 <!-- START OF POLINA'S BLOCK -->
-                <div class="polina">
+                <!-- <div class="polina">
                     <div class="polina__flex">
                         <img src="./src/img/polina.jpg" />
                         <div class="polina__flex-right">
@@ -67,13 +66,56 @@
                             </ul>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- END OF POLINA'S BLOCK -->
 
-                <!-- START OF BENEFITS BLOCK -->
+                <!-- START OF WHO WE STUDY BLOCK -->
+                <div class="study">
+                    <h2>Кого мы обучаем?</h2>
+                    <div class="study__flex">
+                        <div class="study__flex-item">
+                            <h3>Дошкольники от 3 до 6 лет</h3>
+                            <ul>
+                                <li>Научим ребёнка читать и писать</li>
+                                <li>Подготовим к поступлению в школу</li>
+                                <li>Поможем заговорить на английском</li>
+                            </ul>
+                        </div>
+                        <div class="study__flex-item">
+                            <h3>Школьники от 7 до 12 лет</h3>
+                            <ul>
+                                <li>
+                                    Повысим успеваемость по школьной программе
+                                </li>
+                                <li>Решим трудности с домашними заданиями</li>
+                                <li>Подготовим к контрольным и тестам</li>
+                            </ul>
+                        </div>
+                        <div class="study__flex-item">
+                            <h3>Подростки от 12 до 17 лет</h3>
+                            <ul>
+                                <li>Подготовим к поступлению в гимназию</li>
+                                <li>
+                                    Поможем сдать ОГЭ и ЕГЭ на высокие баллы
+                                </li>
+                                <li>
+                                    Подготовим к олимпиадам и вступительным
+                                    экзаменам
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <!-- END OF WHO WE STUDY BLOCK -->
 
+                <!-- START OF BENEFITS BLOCK -->
                 <div class="benefits">
-                    <h2>Наше преимущество</h2>
+                    <h2>Учеба в Polly Glotiki School — это приключение</h2>
+                    <div class="benefits__description">
+                        Дети ждут занятий, потому что мы погружаем их в мир
+                        нескучного английского языка. Без нудной теории и
+                        однотипных заданий.
+                    </div>
                     <div class="benefits__flex">
                         <div class="benefits__half">
                             <div class="benefits__half_1">
@@ -83,11 +125,12 @@
                                     src="./src/img/pencil-blue.png"
                                     alt=""
                                 />
-                                <h3>Lorem ipsum dolor</h3>
+                                <h3>Онлайн-формат</h3>
                                 <p>
-                                    Lorem ipsum, dolor sit amet consectetur
-                                    adipisicing elit. Impedit mollitia ad quam.
-                                    Quo qui nobis nulla obcaecati
+                                    Учимся дома, на даче, в парке или на отдыхе.
+                                    Все занятия проходят онлайн — вы сами
+                                    выбираете, где вам удобно подключиться к
+                                    уроку.
                                 </p>
                             </div>
                             <div class="benefits__half_1">
@@ -97,11 +140,12 @@
                                     src="./src/img/clock-blue.png"
                                     alt=""
                                 />
-                                <h3>Lorem ipsum dolor</h3>
+                                <h3>Интерактивные упражнения</h3>
                                 <p>
-                                    Lorem ipsum, dolor sit amet consectetur
-                                    adipisicing elit. Impedit mollitia ad quam.
-                                    Quo qui nobis nulla obcaecati
+                                    На занятиях мы играем, разбираем английские
+                                    песни, устраиваем викторины и квизы. Дети не
+                                    замечают, как пролетает время — подбираем
+                                    материалы по интересам.
                                 </p>
                             </div>
                         </div>
@@ -113,11 +157,11 @@
                                     src="./src/img/contacts-blue.png"
                                     alt=""
                                 />
-                                <h3>Lorem ipsum dolor</h3>
+                                <h3>Открытый преподаватель</h3>
                                 <p>
-                                    Lorem ipsum, dolor sit amet consectetur
-                                    adipisicing elit. Impedit mollitia ad quam.
-                                    Quo qui nobis nulla obcaecati
+                                    Урок ведёт не только преподаватель, но и
+                                    ученик. Мы внимательно слушаем, поддерживаем
+                                    и не критикуем за ошибки.
                                 </p>
                             </div>
                             <div class="benefits__half_1">
@@ -127,63 +171,104 @@
                                     src="./src/img/ok-blue2.png"
                                     alt=""
                                 />
-                                <h3>Lorem ipsum dolor</h3>
+                                <h3>Индивидуальный план</h3>
                                 <p>
-                                    Lorem ipsum, dolor sit amet consectetur
-                                    adipisicing elit. Impedit mollitia ad quam.
-                                    Quo qui nobis nulla obcaecati
+                                    Составляем уроки по возрасту и уровню
+                                    подготовки ребенка — определяем после
+                                    диагностического урока. Плавно погружаем в
+                                    обучение и работаем с мотивацией ученика.
                                 </p>
                             </div>
                         </div>
                     </div>
                 </div>
             </main>
-
             <!-- END OF BENEFITS BLOCK -->
 
             <!-- START OF TEAM BLOCK -->
             <div id="id2" class="team">
-                <h2>Наша команда</h2>
+                <h2>Знакомьтесь, наша команда!</h2>
+                <div class="team__description">
+                    У каждого преподавателя есть суперсилы — они как персонажи
+                    из комиксов защищают учеников от скуки на уроках и разрушают
+                    языковые барьеры.
+                </div>
                 <div class="team__member">
-                    <img src="./src/img/team.jpg" alt="team" />
+                    <img src="./src/img/polina.jpg" alt="team" />
                     <div class="team__member_right">
-                        <h3>Лера Петрова</h3>
+                        <h3>Полина Кулагина</h3>
                         <p class="team__member_sign">
-                            Преподаватель для малышей
+                            Руководитель и старший преподаватель школы
                         </p>
-                        <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing
-                            elit. Optio quod, et ipsa molestiae beatae,
-                            recusandae sed mollitia at repellat
-                        </p>
+                        <ul>
+                            <li>Дипломированный филолог</li>
+                            <li>6 лет преподаёт английский язык</li>
+                            <li>
+                                Работает с учениками всех уровней и возрастов
+                            </li>
+                        </ul>
                     </div>
                 </div>
                 <div class="team__member">
-                    <img src="./src/img/team.jpg" alt="team" />
+                    <img src="./src/img/vika.jpg" alt="team" />
                     <div class="team__member_right">
-                        <h3>Лера Петрова</h3>
+                        <h3>Виктория</h3>
                         <p class="team__member_sign">
-                            Преподаватель для малышей
+                            Возраст учеников: от 4 до 6 лет
                         </p>
-                        <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing
-                            elit. Optio quod, et ipsa molestiae beatae,
-                            recusandae sed mollitia at repellat
-                        </p>
+                        <ul>
+                            Суперсилы:
+                            <li>
+                                Помогает дошкольникам быстро заговорить на
+                                английском
+                            </li>
+                            <li>Сделает любой урок интерактивным</li>
+                            <li>
+                                С ней ученики начинают читать через месяц
+                                занятий
+                            </li>
+                        </ul>
                     </div>
                 </div>
                 <div class="team__member">
-                    <img src="./src/img/team.jpg" alt="team" />
+                    <img src="./src/img/nastya.jpg" alt="team" />
                     <div class="team__member_right">
-                        <h3>Лера Петрова</h3>
+                        <h3>Анастасия</h3>
                         <p class="team__member_sign">
-                            Преподаватель для малышей
+                            Возраст учеников: от 7 до 12 лет
                         </p>
-                        <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing
-                            elit. Optio quod, et ipsa molestiae beatae,
-                            recusandae sed mollitia at repellat
+                        <ul>
+                            Суперсилы:
+                            <li>Кидает спасательный круг в океан грамматики</li>
+                            <li>
+                                Объясняет самые сложные правила на подручных
+                                предметах
+                            </li>
+                            <li>
+                                Владеет секретной техникой удержания внимания
+                                учеников
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="team__member">
+                    <img src="./src/img/yana.jpg" alt="team" />
+                    <div class="team__member_right">
+                        <h3>Яна</h3>
+                        <p class="team__member_sign">
+                            Возраст учеников: от 12 до 17 лет
                         </p>
+                        <ul>
+                            Суперсилы:
+                            <li>
+                                Готовит к поступлению в гимназию и лицей в
+                                сжатые сроки
+                            </li>
+                            <li>
+                                Доводит до высокой оценки на ОГЭ без слёз и
+                                недосыпов
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -192,53 +277,88 @@
             <!-- START OF PRICES BLOCK -->
             <div class="prices">
                 <div class="prices__info">
-                    <h2>Цены за занятия</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Nulla expedita in pariatur sapiente, minus culpa
-                        mollitia
-                    </p>
+                    <h2>Тарифы и цены</h2>
+
+                    <h3>Групповые занятия</h3>
                 </div>
-                <div class="prices__flex">
+                <div class="prices__flex1">
                     <img src="./src/img/price1.png" alt="price" />
-                    <!-- <div class="prices__flex_item">
-                        <h3>Team work</h3>
-                        <div class="prices__flex_item-sign">
-                            Работа в команде с другими учениками
-                        </div>
-                        <h2>750₽/60 мин</h2>
-                        <h3>ХОЧУ ЭТОТ ТАРИФ, ПОТОМУ ЧТО:</h3>
-                        <div class="prices__flex_item-list">
-                            <img src="./src/img/ok-blue.png" alt="ok" />
-                            <div>
-                                ребенку интересно заниматься с другими детьми
-                            </div>
-                        </div>
-                        <div>включается соревновательный дух</div>
-                        <div>
-                            разнообразие заданий для групп - больше практики
-                        </div>
-                        <div>преодолевает языковой барьер</div>
-                        <div>обсуждает разные хобби и делится успехами</div>
-                        <div>цена за урок</div>
-                        <p>Основной возраст учеников от 5-15 лет!</p>
-                        <div class="prices__flex_item-sign">Выгодно</div>
-                        <button>60 мин - 750₽</button>
-                    </div> -->
                     <img src="./src/img/price2.png" alt="price" />
+                </div>
+
+                <h3 class="prices__h3">Индивидуальные занятия</h3>
+                <div class="prices__flex2">
                     <img src="./src/img/price3.png" alt="price" />
                     <img src="./src/img/price4.png" alt="price" />
                 </div>
             </div>
             <!-- END OF PRICES BLOCK -->
 
+            <!-- START OF REVIEWS BLOCK -->
+            <div class="reviews">
+                <h2>Что пишут о нас родители?</h2>
+                <div class="reviews__flex">
+                    <div class="reviews__flex-item">
+                        <h3>Эва, 7 лет</h3>
+                        <p>
+                            Начали заниматься с нуля. За 10 месяцев групповых
+                            занятий освоили чтение, базовую грамматику и
+                            лексику.
+                        </p>
+                        <ul>
+                            Результат:
+                            <li>
+                                Разрушили языковой барьер — ребёнок не боится
+                                разговаривать!
+                            </li>
+                        </ul>
+                        <img src="./src/img/review1.jpg" alt="review" />
+                    </div>
+
+                    <div class="reviews__flex-item">
+                        <h3>Вова, 7 лет</h3>
+                        <p>
+                            Начали с нуля. За 1,5 года занятий он научился
+                            читать, писать и поддерживать диалог.
+                        </p>
+                        <ul>
+                            Результат:
+                            <li>
+                                Читает истории на английском и легко справляется
+                                со школьной программой.
+                            </li>
+                        </ul>
+                        <img src="./src/img/review3.jpg" alt="review" />
+                    </div>
+
+                    <div class="reviews__flex-item">
+                        <h3>Аня, 13 лет</h3>
+                        <p>3 года назад пришла к нам с пробелами в знаниях.</p>
+                        <ul>
+                            Результат:
+                            <li>
+                                Читает статьи в оригинале, смотрит зарубежных
+                                блогеров. Переводит тексты песен, которые ей
+                                интересны. Общается с носителями и без проблем
+                                поддерживает разговор на любую бытовую тему.
+                            </li>
+                        </ul>
+                        <img src="./src/img/review2.jpg" alt="review" />
+                    </div>
+                </div>
+            </div>
+            <!-- END OF REVIEWS BLOCK -->
+
             <!-- START OF OFFER BLOCK -->
             <div id="id1" class="offer">
                 <div class="offer__flex">
                     <div>
                         <div>
-                            <h2>Записаться на урок</h2>
-                            <p>Первый урок совершенно бесплатно</p>
+                            <h2>Записывайтесь на занятие</h2>
+                            <p>
+                                На нём мы определим уровень ребёнка, составим
+                                расписание и наметим план работы
+                            </p>
                             <h3>Что включено:</h3>
                         </div>
                         <div class="offer__flex_left">
@@ -261,8 +381,7 @@
                         </div>
                     </div>
                     <div class="offer__flex_right">
-                        <h3>Запишитесь на пробный урок</h3>
-                        <a href="">запись</a>
+                        <a href="">записаться на занятие</a>
                     </div>
                 </div>
             </div>
