--- a/index.html
+++ b/index.html
@@ -277,16 +277,15 @@
             <!-- START OF PRICES BLOCK -->
             <div class="prices">
                 <div class="prices__info">
-                    <h2>Тарифы и цены</h2>
-
-                    <h3>Групповые занятия</h3>
+                    <h2>Тарифы и цены на групповые занятия</h2>
                 </div>
                 <div class="prices__flex1">
                     <img src="./src/img/price1.png" alt="price" />
                     <img src="./src/img/price2.png" alt="price" />
                 </div>
-
-                <h3 class="prices__h3">Индивидуальные занятия</h3>
+                <div class="prices__group">
+                    <h2>Тарифы и цены на индивидуальные занятия</h2>
+                </div>
                 <div class="prices__flex2">
                     <img src="./src/img/price3.png" alt="price" />
                     <img src="./src/img/price4.png" alt="price" />
