--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                 <div class="offer__flex">
                     <div>
                         <div>
-                            <h2>Записывайтесь на занятие</h2>
+                            <h2>Записывайтесь на пробное бесплатное занятие</h2>
                             <p>
                                 На нём мы определим уровень ребёнка, составим
                                 расписание и наметим план работы
