Fix team block, delete question block

--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
                             Руководитель и старший преподаватель школы
                         </p>
                         <ul>
+                            Суперсилы:
                             <li>Дипломированный филолог</li>
                             <li>6 лет преподаёт английский язык</li>
                             <li>
@@ -208,7 +209,9 @@
                             </li>
                         </ul>
                     </div>
+                    <a href="">Записаться на пробный урок</a>
                 </div>
+
                 <div class="team__member">
                     <img src="./src/img/vika.jpg" alt="team" />
                     <div class="team__member_right">
@@ -229,6 +232,7 @@
                             </li>
                         </ul>
                     </div>
+                    <a href="">Записаться на пробный урок</a>
                 </div>
                 <div class="team__member">
                     <img src="./src/img/nastya.jpg" alt="team" />
@@ -250,6 +254,7 @@
                             </li>
                         </ul>
                     </div>
+                    <a href="">Записаться на пробный урок</a>
                 </div>
                 <div class="team__member">
                     <img src="./src/img/yana.jpg" alt="team" />
@@ -270,6 +275,7 @@
                             </li>
                         </ul>
                     </div>
+                    <a href="">Записаться на пробный урок</a>
                 </div>
             </div>
             <!-- END OF TEAM BLOCK -->
@@ -363,19 +369,25 @@
                         <div class="offer__flex_left">
                             <div class="offer__flex_left-item">
                                 <img src="./src/img/ok-white.png" alt="ok" />
-                                <span>Lorem ipsum dolor sit</span>
+                                <span>Определение уровня ученика</span>
                             </div>
                             <div class="offer__flex_left-item">
                                 <img src="./src/img/ok-white.png" alt="ok" />
-                                <span>Lorem ipsum dolor sit</span>
+                                <span
+                                    >Знакомство с преподавателем и
+                                    платформой</span
+                                >
                             </div>
                             <div class="offer__flex_left-item">
                                 <img src="./src/img/ok-white.png" alt="ok" />
-                                <span>Lorem ipsum dolor sit</span>
+                                <span
+                                    >Увлекательное приключение в мир
+                                    английского</span
+                                >
                             </div>
                             <div class="offer__flex_left-item">
                                 <img src="./src/img/ok-white.png" alt="ok" />
-                                <span>Lorem ipsum dolor sit</span>
+                                <span>Фидбек после урока</span>
                             </div>
                         </div>
                     </div>
@@ -387,7 +399,7 @@
             <!-- END OF OFFER BLOCK -->
 
             <!-- START OF QUESTIONS BLOCK -->
-            <div class="questions">
+            <!-- <div class="questions">
                 <h2>Вопросы и ответы</h2>
                 <details>
                     <summary>
@@ -425,7 +437,7 @@
                         amet alias provident odio in. Necessitatibus?
                     </p>
                 </details>
-            </div>
+            </div> -->
             <!-- END OF QUESTIONS BLOCK -->
             <!-- START OF FOOTER -->
             <!-- <footer>
