Feature add video buttons and links

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
                         Для детей и подростков от 4 до 17 лет. Доводим до
                         результата с помощью игр и меняем «надо» на «хочу»!
                     </h3>
-                    <a href="#id1">Записаться на пробный урок</a>
+                    <a
+                        href="https://api.whatsapp.com/send?phone=79029250034&text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5%2C%20%D1%85%D0%BE%D1%87%D1%83%20%D0%BF%D0%BE%D0%BF%D0%B0%D1%81%D1%82%D1%8C%20%D0%BD%D0%B0%20%D0%B1%D0%B5%D1%81%D0%BF%D0%BB%D0%B0%D1%82%D0%BD%D1%8B%D0%B9%20%D0%BF%D1%80%D0%BE%D0%B1%D0%BD%D1%8B%D0%B9%20%D1%83%D1%80%D0%BE%D0%BA"
+                        target="_blank"
+                        >Записаться на пробный урок</a
+                    >
                     <a href="#id2">Выбрать преподавателя</a>
                 </div>
             </header>
@@ -209,11 +213,27 @@
                             </li>
                         </ul>
                     </div>
-                    <a href="">Записаться на пробный урок</a>
+                    <a class="team__polina_a" href=""
+                        >Записаться на пробный урок</a
+                    >
                 </div>
 
                 <div class="team__member">
                     <img src="./src/img/vika.jpg" alt="team" />
+                    <!-- <div
+                        onclick="this.nextElementSibling.style.display='block'; this.style.display='none'"
+                    >
+                        <img src="./src/img/vika.jpg" style="cursor: pointer" />
+                    </div>
+                    <div style="display: none">
+                        <iframe src="https://www.youtube.com/embed/WD7CcpLPQHM">
+                        </iframe>
+                    </div> -->
+                    <!-- <div class="team__iframe">
+                        <iframe src="https://www.youtube.com/embed/WD7CcpLPQHM">
+                        </iframe>
+                    </div> -->
+
                     <div class="team__member_right">
                         <h3>Виктория</h3>
                         <p class="team__member_sign">
@@ -232,7 +252,18 @@
                             </li>
                         </ul>
                     </div>
-                    <a href="">Записаться на пробный урок</a>
+                    <div class="team__btn">
+                        <a
+                            href="https://api.whatsapp.com/send?phone=79029250034&text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5%2C%20%D1%85%D0%BE%D1%87%D1%83%20%D0%BF%D0%BE%D0%BF%D0%B0%D1%81%D1%82%D1%8C%20%D0%BD%D0%B0%20%D0%BF%D1%80%D0%BE%D0%B1%D0%BD%D1%8B%D0%B9%20%D1%83%D1%80%D0%BE%D0%BA%20%D0%BA%20%D0%92%D0%B8%D0%BA%D1%82%D0%BE%D1%80%D0%B8%D0%B8"
+                            target="_blank"
+                            >Записаться на пробный урок</a
+                        >
+                        <a
+                            href="https://www.youtube.com/shorts/WD7CcpLPQHM"
+                            target="_blank"
+                            >Посмотреть видео-визитку</a
+                        >
+                    </div>
                 </div>
                 <div class="team__member">
                     <img src="./src/img/nastya.jpg" alt="team" />
@@ -254,7 +285,18 @@
                             </li>
                         </ul>
                     </div>
-                    <a href="">Записаться на пробный урок</a>
+                    <div class="team__btn">
+                        <a
+                            href="https://api.whatsapp.com/send?phone=79029250034&text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5%2C%20%D1%85%D0%BE%D1%87%D1%83%20%D0%BF%D0%BE%D0%BF%D0%B0%D1%81%D1%82%D1%8C%20%D0%BD%D0%B0%20%D0%BF%D1%80%D0%BE%D0%B1%D0%BD%D1%8B%D0%B9%20%D1%83%D1%80%D0%BE%D0%BA%20%D0%BA%20%D0%90%D0%BD%D0%B0%D1%81%D1%82%D0%B0%D1%81%D0%B8%D0%B8"
+                            target="_blank"
+                            >Записаться на пробный урок</a
+                        >
+                        <a
+                            href="https://www.youtube.com/shorts/zWDVC4C43Vc"
+                            target="_blank"
+                            >Посмотреть видео-визитку</a
+                        >
+                    </div>
                 </div>
                 <div class="team__member">
                     <img src="./src/img/yana.jpg" alt="team" />
@@ -275,7 +317,18 @@
                             </li>
                         </ul>
                     </div>
-                    <a href="">Записаться на пробный урок</a>
+                    <div class="team__btn">
+                        <a
+                            href="https://wa.me/79029250034?text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5,%20%D1%85%D0%BE%D1%87%D1%83%20%D0%BF%D0%BE%D0%BF%D0%B0%D1%81%D1%82%D1%8C%20%D0%BD%D0%B0%20%D0%BF%D1%80%D0%BE%D0%B1%D0%BD%D1%8B%D0%B9%20%D1%83%D1%80%D0%BE%D0%BA%20%D0%BA%20%D0%AF%D0%BD%D0%B5"
+                            target="_blank"
+                            >Записаться на пробный урок</a
+                        >
+                        <a
+                            href="https://www.youtube.com/shorts/4LushIApUMI"
+                            target="_blank"
+                            >Посмотреть видео-визитку</a
+                        >
+                    </div>
                 </div>
             </div>
             <!-- END OF TEAM BLOCK -->
@@ -392,7 +445,11 @@
                         </div>
                     </div>
                     <div class="offer__flex_right">
-                        <a href="">записаться на занятие</a>
+                        <a
+                            href="https://api.whatsapp.com/send?phone=79029250034&text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5%2C%20%D1%85%D0%BE%D1%87%D1%83%20%D0%BF%D0%BE%D0%BF%D0%B0%D1%81%D1%82%D1%8C%20%D0%BD%D0%B0%20%D0%B1%D0%B5%D1%81%D0%BF%D0%BB%D0%B0%D1%82%D0%BD%D1%8B%D0%B9%20%D0%BF%D1%80%D0%BE%D0%B1%D0%BD%D1%8B%D0%B9%20%D1%83%D1%80%D0%BE%D0%BA"
+                            target="_blank"
+                            >записаться на пробный урок</a
+                        >
                     </div>
                 </div>
             </div>
